--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ span {
     flex-wrap: wrap;
     padding: 2rem 9%;
     background: var(--second-bg-color);
+    /*bottom: 0;*/
 }
 
 .footer-text p {
